# simple-atom

./: Makefile  simple-atom.cabal
Data/Atom/: Simple.hs  UF.hs
